dpkg (1.13.10) unstable; urgency=low
  The "Bully's Special Prize" Release.

  * Removed /usr/sbin/start-stop-daemon.  Closes: #313400.
  * Fixed md5sum diversion removal.  Closes: #313415.
  * Fixed dpkg-source to handle native tarballs with a Debian revision.
    Closes: #313381, #313433.
  * Fixed upgrade from pre-sarge dpkg outside of dselect.  Closes: #314575.
  * Changed log times to be local rather than UTC.  Closes: #313347.
  * Changed log writing to be line-buffered.  Closes: #314550.
  * Moved log creation to postinst, and don't fail if base-passwd hasn't
    been configured yet.  Closes: #316084.
  * Don't try to compile in SELinux support on Hurd.  Closes: #313398.
  * Place code for SELinux support in the right place so it will actually
    get compiled in and used (Manoj Srivastava).  Closes: #314886.

  * Documentation:
    - Added missing word to dpkg-architecture manpage.  Closes: #313554.
    - Reference to dpkg manpage in dpkg.cfg corrected.  Closes: #314262.
  * Updated Translations (Christian Perrier):
    - Basque (Piarres Beobide Egana).  Closes: #313474.
    - Catalan (Jordi Mallach).  Closes: #313288.
    - Czech (Miroslav Kure).  Closes: #314431.
    - Danish (Claus Hindsgaul).
    - French (Christian Perrier).
    - German (Jens Seidel).  Closes: #314125.
    - Greek (Greek team).  Closes: #314828.
    - Italian (Lele Gaifax).
    - Japanese (Kenshi Muto).  Closes: #313330.
    - Russian (Yuri Kozlov).  Closes: #313620.
  * Hebrew translation de-activated on request of the translator until there
    is better support for RTL languages.  Closes: #313282.

 -- Scott James Remnant <scott@netsplit.com>  Tue, 28 Jun 2005 14:19:06 +0100

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,77 @@
+2005-06-28  Scott James Remnant  <scott@netsplit.com>
+
+	* configure.ac: Release 1.13.10.
+
+	* debian/dpkg.preinst (create_logfile): Remove from preinst.
+	* debian/dpkg.postinst (create_logfile): To postinst; I can't think
+	of any particular reason it needs to happen before configuration.
+	In addition, use numeric ids for the chown call to avoid requirement
+	that base-passwd be configured first.
+
+2005-06-28  Manoj Srivastava  <srivasta@debian.org>
+
+	* src/archives.c: Look at the security context of the final
+	destination, not the temporary file.
+
+2005-06-24  Scott James Remnant  <scott@netsplit.com>
+
+	* po/POTFILES.in: Remove lib/star.c.
+
+2005-06-24  Manoj Srivastava  <srivasta@debian.org>
+
+	* src/archives.c: Restore selinux code incorrectly placed in
+	lib/star.c, modified to fit in with tarobject.
+
+2005-06-17  Scott James Remnant  <scott@netsplit.com>
+
+	* debian/dpkg.preinst (confirm_dselect_split): When set -e,
+	following a command with "|| return" doesn't eat the exit status.
+
+	* lib/dbmodify.c (log_message): Set the log to be line-buffered.
+
+2005-06-16  Scott James Remnant  <scott@netsplit.com>
+
+	* lib/star.c: Remove, it's unused code and causes confusion.
+	* lib/Makefile.am (libdpkg_a_SOURCES): Don't compile star.c.
+
+2005-06-15  Bastian Kleineidam  <calvin@debian.org>
+
+	* man/C/dpkg.cfg.5: Correct reference to dpkg(8) to dpkg(1).
+
+2005-06-14  Scott James Remnant  <scott@netsplit.com>
+
+	* man/C/dpkg-architecture.1: Add missing "recent" from paragraph
+	on backward compatibility.
+
+2005-06-13  Scott James Remnant  <scott@netsplit.com>
+
+	* debian/rules: Check DEB_HOST_ARCH_OS and only add the option
+	to enable SELinux if we're on Linux.
+	* debian/control (Build-Depends): Don't build-depend on
+	libselinux1-dev on hurd-i386.  The complete list is too long to
+	maintain, so wait until we can put "[linux-any]" in here.
+
+	* scripts/dpkg-source.pl: Handle native tarballs with a
+	Debian revision.
+
+	* lib/dbmodify.c (log_message): Use the local time, not UTC;
+	this is more consistent with syslog.
+
+2005-06-13  Johannes Veser  <veser@gmx.de>
+
+	* debian/dpkg.prerm (undivert_md5sum): dpkg-divert takes the
+	diverted filename, not the destination.
+
+2005-06-13  Scott James Remnant  <scott@netsplit.com>
+
+	* debian/dpkg.install: Remove start-stop-daemon rule, as that
+	copies it rather than moves it.
+	* debian/rules (binary-arch): Move start-stop-daemon into sbin
+	my hand.
+
 2005-06-12  Scott James Remnant  <scott@netsplit.com>
+
+	* configure.ac: Bump version to 1.13.10~.
 
 	* configure.ac: Release 1.13.9.
 
