--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,39 @@
+dpkg (1.13.10) unstable; urgency=low
+  
+  The "Bully's Special Prize" Release.
+
+  * Removed /usr/sbin/start-stop-daemon.  Closes: #313400.
+  * Fixed md5sum diversion removal.  Closes: #313415.
+  * Fixed dpkg-source to handle native tarballs with a Debian revision.
+    Closes: #313381, #313433.
+  * Fixed upgrade from pre-sarge dpkg outside of dselect.  Closes: #314575.
+  * Changed log times to be local rather than UTC.  Closes: #313347.
+  * Changed log writing to be line-buffered.  Closes: #314550.
+  * Moved log creation to postinst, and don't fail if base-passwd hasn't
+    been configured yet.  Closes: #316084.
+  * Don't try to compile in SELinux support on Hurd.  Closes: #313398.
+  * Place code for SELinux support in the right place so it will actually
+    get compiled in and used (Manoj Srivastava).  Closes: #314886.
+
+  * Documentation:
+    - Added missing word to dpkg-architecture manpage.  Closes: #313554.
+    - Reference to dpkg manpage in dpkg.cfg corrected.  Closes: #314262.
+  * Updated Translations (Christian Perrier):
+    - Basque (Piarres Beobide Egana).  Closes: #313474.
+    - Catalan (Jordi Mallach).  Closes: #313288.
+    - Czech (Miroslav Kure).  Closes: #314431.
+    - Danish (Claus Hindsgaul).
+    - French (Christian Perrier).
+    - German (Jens Seidel).  Closes: #314125.
+    - Greek (Greek team).  Closes: #314828.
+    - Italian (Lele Gaifax).
+    - Japanese (Kenshi Muto).  Closes: #313330.
+    - Russian (Yuri Kozlov).  Closes: #313620.
+  * Hebrew translation de-activated on request of the translator until there
+    is better support for RTL languages.  Closes: #313282.
+
+ -- Scott James Remnant <scott@netsplit.com>  Tue, 28 Jun 2005 14:19:06 +0100
+
 dpkg (1.13.9) unstable; urgency=low
   
   The "On like Donkey Kong" Release.
