--- a/man/C/dpkg-architecture.1
+++ b/man/C/dpkg-architecture.1
@@ -165,7 +165,7 @@ Debian architectures which don't equal a processor name.
 .SH "BACKWARD COMPATIBILITY"
 .IX Header "BACKWARD COMPATIBILITY"
 The DEB_HOST_ARCH_CPU and DEB_HOST_ARCH_OS variables were only introduced
-in relatively versions of \fIdpkg-architecture\fR (since dpkg 1.13.2),
+in relatively recent versions of \fIdpkg-architecture\fR (since dpkg 1.13.2),
 before this \fIdebian/rules\fR files tended to check the values of the
 DEB_HOST_GNU_CPU or DEB_HOST_GNU_TYPE variables which have been subject
 to change.
