--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,47 @@
+2005-06-19  Claus Hindsgaul  <claus_h@image.d>
+
+	* da.po: Completed
+
+2005-06-19  Greek translation team  <debian-l10n-greek@lists.debian.org>
+
+	* el.po: Completed (one fuzzy left)
+
+2005-06-14  Miroslav Kure  <kurem@upcase.inf.upol.cz>
+
+	* cs.po: Completed
+
+2005-06-15  Jens Seidel  <jensseidel@users.sf.net>
+
+	* de.po: automatically spellchecked
+
+2005-06-14  Christian Perrier  <bubulle@debian.org>
+
+	* LINGUAS: De-activate Hebrew
+
+2005-06-14  Lele Gaifax  <lele@nautilus.homeip.net>
+
+	* it.po: Completed
+
+2005-06-14  Yuri Kozlov  <yuray@id.ru>
+
+	* ru.po: Completed
+
+2005-06-14  Piarres Beobide Egana  <pi@beobide.net>
+
+	* eu.po: Completed
+
+2005-06-14  Kenshi Muto  <kmuto@debian.org>
+
+	* ja.po: Completed
+
+2005-06-14  Jordi Mallach  <jordi@debian.org>
+
+	* ca.po: Completed
+
+2005-06-13  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Completed
+
 2005-05-25  Eddy Petrisor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Nearly complete translation..:-)
