Actually import 1.13.11.1, not 1.13.11, D'oh!

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-08-17  Scott James Remnant  <scott@netsplit.com>
 
+	* configure.ac: Bump version to 1.13.12~.
+
 	* configure.ac: Release 1.13.11.
 
 	* scripts/dpkg-source.pl: Re-work the logic that handles the Files
