--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.13.11.1) unstable; urgency=low
+
+  * Change maintainers to new team.
+
+ -- Scott James Remnant <scott@netsplit.com>  Thu, 12 Jan 2006 07:56:49 +0000
+
 dpkg (1.13.11) unstable; urgency=low
   
   The "Good, clean fun" Release.
