Let dpkg-gencontrol bail out with an error if parsedep found an error while parsing a dependency field. Closes: #228125

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dpkg (1.13.12~) unstable; urgency=low
+
+  [Frank Lichtenheld]
+  * Let dpkg-gencontrol bail out with an error if parsedep
+    found an error while parsing a dependency field. Closes: #228125
+
+ --
+
 dpkg (1.13.11.1) unstable; urgency=low
 
   * Change maintainers to new team.
