--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-27  Frank Lichtenheld  <djpig@debian.org>
+
+       * scripts/dpkg-gencontrol: Bail out with an error if parsedep
+       found an error while parsing a dependency field.
+
 2005-08-17  Scott James Remnant  <scott@netsplit.com>
 
 	* configure.ac: Bump version to 1.13.12~.
