Let dpkg-source -b check the build relation fields before putting them into the .dsc. As a side effect they also get normalized. Closes: #254449

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-10-04  Frank Lichtenheld  <djpig@debian.org>
+ 
+	* scripts/dpkg-source.pl: Check build relation
+	fields for correctness before putting them into
+	the .dsc when building. This also normalizes the
+	fields.
+ 
 2005-10-03  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-source.pl: Try to chown files extracted from
