--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ dpkg (1.13.12~) unstable; urgency=low
   * Check the gpg signatures of .dsc files before unpacking. See
     the upstream changelog for a full description of the semantics.
     Based on a patch by Matt Zimmerman. Closes: #48711
+  * Let dpkg-source ensure (as good as possible) that all
+    build source packages can also be unpacked.
+    Closes: #6820, #7014
 
  --
 
