Check for illegal architecture strings in dpkg-gencontrol and dpkg-source. dpkg-gencontrol will only issue a warning while dpkg-source will error out. Closes: #96920

--- a/ChangeLog
+++ b/ChangeLog
@@ -45,6 +45,12 @@
 	directory mode 0700 to not allow anyone exploiting races
 	between the extraction and the chown.
 
+	* scripts/dpkg-gencontrol.pl: Warn about illegal architecture
+	strings. This will warn e.g. about comma-separated architecture
+	lists.
+	* scripts/dpkg-source.pl: Also check architecture strings and
+	error out if we find illegal ones.
+
 2005-08-27  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-gencontrol: Bail out with an error if parsedep
