--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ dpkg (1.13.12~) unstable; urgency=low
   * Let dpkg-source ensure (as good as possible) that all
     build source packages can also be unpacked.
     Closes: #6820, #7014
+  * Check for illegal architecture strings in dpkg-gencontrol and
+    dpkg-source. dpkg-gencontrol will only issue a warning while
+    dpkg-source will error out. Closes: #96920
 
  --
 
