Fix man page references to dpkg and dselect man pages. Many of them still had a wrong section. Closes: #332826

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,9 @@ dpkg (1.13.12~) unstable; urgency=low
     dpkg-source will error out. Closes: #96920
   * Add support "package types" to dpkg-shlibdeps. Patch by
     Joey Hess. Closes: #345475
+  * Fix man page references to dpkg and dselect man pages. Many
+    of them still had a wrong section.
+    Closes: #332826
 
  --
 
