--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,13 @@
 	* man/C/dpkg-source.1: Document new -t
 	switch for dpkg-shlibdeps
 
+2005-10-11  Frank Lichtenheld  <djpig@debian.org>
+
+	* man/C/*.[158]: Update references to dpkg and dselect
+	man pages with correct section (8->1)
+	* man/C/dselect.1: Update reference to debconf
+	man page with correct section (8->1)
+
 2005-10-07  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/controllib.pl:
