Let dpkg-source -b warn about special permissions of files added in the diff since these will get lost. Closes: #306125

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,10 @@
 	* man/C/dselect.1: Update reference to debconf
 	man page with correct section (8->1)
 
+	* scripts/dpkg-source.pl: Warn on -b if we add a file with
+	special (i.e. exectuable or set{u,g}id) permission in the
+	diff since this mode will get lost.
+
 2005-10-07  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/controllib.pl:
